# hi-c

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  system.h  util.h
src/calc/: calc.cpp  calc.h
src/find/: find.c  find.h
src/hash/: hash.c  hash.h
src/open/: open.c  open.h
src/path/: path.c  path.h
src/size/: size.c  size.h
src/stat/: stat.c  stat.h
src/sync/: cache.c  cleanup.c  diff.c  flist.c  flist.h  restore.c  sync.c  sync.h
src/util/: console.c  console.h  io.c  io64.c  security.h
src/util/secure/: fx.c  security.h  sha256.c
src/wdex/: wdex.c  wdex.h
